syntax = "proto3";

package tensorflow.data;

option go_package = "github.com/tensorflow/tensorflow/tensorflow/go/core/framework/dataset_metadata_go_proto";

// next: 3
message Metadata {
  bytes name = 1;
  string data_service_address = 2;
}
